test/errors/assign_global_bad_type.luv
# CRET: 1
# CERR: {self}:8:13:    myvar = "hi!"
# CERR: {ssss}                  ^ error: Cannot assign type str to type i32.
myvar = 1

def int main():
    global myvar
    myvar = "hi!"
    return 0
